--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+__STATUS: DEVELOPMENT! DO NOT COMPILE AND USE!
+
 ---This plugin requires ExpensiveStones v7.0.5 or higher!---
 
 Welcome to ExpensiveStones Readme, here will you find all info about ExpensiveStones relating to configuration and the workings.
