Added some code to blockListener. Chached some recuring commands on 'finished' Need something to get ExpensiveField by Sign location. Considering making an extra map or a funciton that iterate along all known fields. It is either memory or cpu!

--- a/README
+++ b/README
@@ -39,3 +39,9 @@ You can define the Period by either placing 's' or 't', representing 's'econds o
   CONSOLE ONLY
   expensiveStones uninstall -true (deletes EVERYTHING related to ExpensiveFields)
   expensiveStones purge -true (drops the expensiveStone table)
+
+**Dev notes*
+FieldTypes:
+ -Active
+ -Disabled (dormant for new fields)
+ -Admin (ignored on startup)
